css/styles.css
/* ... */
#about #socials-list .socials-li:nth-child(3) .socials-links {
  color: var(--clr-inky);
  text-shadow: var(--ts-clr-match);
} 

#about #socials-list .socials-li:nth-child(4) .socials-links {
  color: var(--clr-clyde);
  text-shadow: var(--ts-clr-match);
} 

#about #socials-list .socials-li:nth-child(5) .socials-links {
  color: var(--clr-sue);
  text-shadow: var(--ts-clr-match);
} 

#about #socials-list .socials-li:nth-child(6) .socials-links {
  color: var(--clr-funky);
  text-shadow: var(--ts-clr-match);
} 

#about #socials-list .socials-li:nth-child(7) .socials-links {
  color: var(--clr-pacman);
  text-shadow: var(--ts-clr-match);
} 

#about #socials .socials-icons {
  opacity: 0.7;
  transition: all 188ms ease-in-out;
}

#about #socials .socials-icons:hover {
  opacity: 1;
}

#about #socials .socials-links:hover .socials-icons {
  transform: scale(1.8) rotate(360deg);
}

#about #socials-list .socials-li:first-of-type .socials-links:hover .socials-links,
#about #socials-list .socials-li:nth-of-type(5) .socials-links:hover .socials-links {
  transform: scale(1.8) rotate(360deg);
}

#about #socials .socials-icons:active {
  transform: translateX(3px);
}

#about #socials .socials-text {
  display: none;

  transform: scale(0);
  opacity: 0;
  visibility: hidden;
}

#about #avatar-container {
  display: grid;
  justify-content: center;
  
  margin-bottom: 33px;
  padding: 0 55px;
  width: 100%;

  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
}

#about #avatar-overflow-container {
  position: relative;
  
  border-radius: 50%;
  margin: 0 auto;
  overflow: hidden;

  transition: all 0.3s ease-in;
}

/* rgbCyclone360 */
#about #avatar-overflow-container::before {
  position: absolute;
  inset: 0;

  content: '';

  background: linear-gradient(to bottom, silver, transparent, transparent);
  border-radius: 50%;
  height: 100%;
  opacity: 55%;
  overflow: hidden;
  width: 100%;

  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */

  animation: three-sixty 3.333s linear infinite; 
  -webkit-animation: three-sixty 3.333s linear infinite;
}

#about #avatar-overflow-container img {
  cursor: pointer;

  filter: saturate(0) brightness(0.7);
  transition: all 0.3s ease-in;
  border-radius: 50%;

  animation: avatar-cyclone 8s linear forwards;
  -webkit-animation: avatar-cyclone 8s linear forwards;
}

#about #avatar-overflow-container img:hover {
  filter: saturate(0.55) brightness(1);
}

#about #avatar-overflow-container img:active {
  animation: avatar-cyclone-active 0.8s ease-in forwards;
}

#about #wave {
  display: inline-block;

  background: initial;
  background-clip: initial;
  -webkit-background-clip: initial;
  -webkit-text-fill-color: initial;
  filter: drop-shadow(0 0 3px black);
  letter-spacing: 5px;
  text-shadow: none;
  vertical-align: 5px;
  
  animation: wave 2.5s infinite;
  -webkit-animation: wave 2.5s infinite;
  transform-origin: 70% 70%;       
  /*  Pivot around the bottom-left palm */
}

#about .emoji-rotate {
  display: inline-block;

  filter: drop-shadow(0 0 3px black);
  text-shadow: initial;

  animation: emoji-rotate 8s linear infinite;
}

#about .nyc {
  font-family: bookman-jf-pro, serif;
  font-style: italic;
  word-spacing: 7px;
  font-feature-settings: unset;
}

#about .nyc-glyph {
  /* use the first available swash character (add 2 after to use the second) */
  font-feature-settings:"swsh";
}

#about #music-link {
  position: relative;

  font-size: 2rem;

  color: rgba(255, 255, 255, 0.618);

  animation: flicker 3.3s linear alternate infinite;
}

#about #music-link:hover {
  animation: hover 0.555s linear infinite alternate; 
}

#about #music-link::before {
  position: absolute;
  inset: 0;
  
  content: '🎤';

  filter: drop-shadow(0 0 10px chartreuse);

  animation: flicker 3.3s linear alternate infinite;
}

#about #music-link::after {
  position: absolute;
  inset: 0;

  opacity: 0;
  content: url('../assets/images/musicNote.gif');
  transform: scale(0.04) translateX(900px) translateY(-800px) rotate(33deg);

  transition: opacity 777ms ease-in-out;
}

#about #music-link:hover::after {
  opacity: 0.88;
}

#about .jkc-text {
  color: #FFFCEF;
  font-size: var(--fs-h3);
  font-weight: var(--fw-bold-700);
  filter: drop-shadow(0 0 3.3px black);
}

#about .cloud {
  display: inline-block;
  animation: cloud 0.5s linear alternate infinite;
  -webkit-animation: cloud 0.5s linear alternate infinite;
  
  background-clip: initial ;
  -webkit-background-clip: initial;
  -webkit-text-fill-color: initial;
  text-shadow: none;
}

#about #stack {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
  width: min(500px, 100%);
  margin-inline:auto;
}

#about .tech-icon {
  display: grid;
  text-align: center; 
}

#about .tech-icon:hover > i {
  animation: jiggle 333ms linear forwards;
  -webkit-animation: jiggle 333ms linear forwards;
}

#about .icon {
  font-size: 2.8rem;
}

#about .icon-name {
  font-size: var(--fs-icon-name);
  transition: transform 333ms ease-in;
  text-shadow: var(--ts-clr-match);
}

#about .tech-icon:hover > .icon-name {
  transform: translateY(-2px) scale(1.3);
}

#projects .project-content {
  position: relative;
}

#projects .project-header {
  font-family: var(--ff-primary);
  font-size: clamp(1.313rem, 3vw, 1.75rem);
}

#projects .project-content:last-child {
  margin-bottom: 0px;
} 

#projects #tcny-project-content .project-description {
  padding: 0 11vw;
}

#projects .section-header-container h3::before {
  box-shadow: 0 0 1em var(--clr-inky);
}
/* ... */

